force-app/main/default/objects/OneCRM__LookupChild__c/fields/OneCRM__Amount__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>