force-app/main/default/objects/OneCRM__LookupChild__c/fields/OneCRM__Color__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Color__c</fullName>
    <label>Color</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>