force-app/main/default/objects/OneCRM__LookupChild__c/fields/OneCRM__Description2__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Description2__c</fullName>
    <label>Description 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>