force-app/main/default/objects/OneCRM__LookupChild__c/fields/OneCRM__Description__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>