force-app/main/default/objects/OneCRM__LookupChild__c/fields/OneCRM__LookupParent2__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__LookupParent2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Parent 2</label>
    <referenceTo>OneCRM__LookupParent__c</referenceTo>
    <relationshipLabel>Lookup Children (Lookup Parent 2)</relationshipLabel>
    <relationshipName>LookupChildren2</relationshipName>
    <type>Lookup</type>
</CustomField>