force-app/main/default/objects/OneCRM__LookupChild__c/fields/OneCRM__LookupParent__c.field-meta.xml
<CustomField>
    <fullName>OneCRM__LookupParent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Parent</label>
    <referenceTo>OneCRM__LookupParent__c</referenceTo>
    <relationshipLabel>Lookup Children</relationshipLabel>
    <relationshipName>LookupChildren</relationshipName>
    <type>Lookup</type>
</CustomField>